Minor fix: added z-index for circles

--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ a {
 
 .page__circle {
     position: absolute;
+    z-index: -1;
     border: 1px solid #FFCE35;
     border-radius: 50%;
 }
